Challenge 1/terraform/modules/security/security_group.tf
resource "aws_security_group" "elb_sg" {
  name        = "elb_allow_http"
  description = "Allow HTTP inbound connections"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }

  tags = {
    Name = "elb_allow_http"
  }
}

resource "aws_security_group" "web_sg" {
  name        = "web_allow_http"
  description = "Allow HTTP traffic from ELB security group"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = ["${aws_security_group.elb_sg.id}"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "web_allow_http"
  }
}
